src/main/kotlin/com/example/lottery/util/error/ResourceNotFoundException.kt
package com.example.lottery.util.error

class ResourceNotFoundException(message: String) : RuntimeException(message)
